syntax = "proto3";

package inventory;

option go_package = "proto/inventory";

import "google/protobuf/timestamp.proto";

message Money {
  int64 amount = 1;    // minor units
  string currency = 2; // ISO 4217
}

// Inventory Service
service InventoryService {
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
  rpc ReserveStock(ReserveStockRequest) returns (ReserveStockResponse);
  rpc ReleaseStock(ReleaseStockRequest) returns (ReleaseStockResponse);
  rpc GetCategories(GetCategoriesRequest) returns (GetCategoriesResponse);
}

// Domain Models
message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  Money price = 4;
  string category_id = 5;
  string category_name = 6;
  int32 stock_quantity = 7;
  string image_url = 8;
  bool is_active = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
  bool is_active = 4;
}

message StockItem {
  string product_id = 1;
  int32 available_quantity = 2;
  int32 reserved_quantity = 3;
}

// Request/Response Messages
message GetProductsRequest {
  string category_id = 1;
  int32 page = 2;
  int32 limit = 3;
  string search = 4;
}

message GetProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message CheckStockRequest {
  repeated StockCheckItem items = 1;
}

message StockCheckItem {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckStockResponse {
  repeated StockCheckResult results = 1;
  bool all_available = 2;
}

message StockCheckResult {
  string product_id = 1;
  int32 requested_quantity = 2;
  int32 available_quantity = 3;
  bool is_available = 4;
}

message ReserveStockRequest {
  string order_id = 1;
  repeated StockReservationItem items = 2;
  string user_id = 3;
}

message StockReservationItem {
  string product_id = 1;
  int32 quantity = 2;
}

message ReserveStockResponse {
  bool success = 1;
  string message = 2;
  repeated string failed_products = 3;
}

message ReleaseStockRequest {
  string order_id = 1;
  repeated StockReservationItem items = 2;
}

message ReleaseStockResponse {
  bool success = 1;
  string message = 2;
}

message GetCategoriesRequest {
  bool active_only = 1;
}

message GetCategoriesResponse {
  repeated Category categories = 1;
}


